# invariant-functors

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  Test.hs  cabal.haskell-ci  invariant.cabal
.github/workflows/: haskell-ci.yml
Data/Functor/: Invariant.hs
src/Data/Functor/: Invariant.hs
src/Data/Functor/Invariant/: Generic.hs  TH.hs
src/Data/Functor/Invariant/TH/: Internal.hs
test/: InvariantSpec.hs  THSpec.hs  Tests.hs
