name: invariant
version: 0.1.2
synopsis: Haskell 98 invariant functors
description: Haskell 98 invariant functors

category: Control, Data

license: BSD3
license-file: LICENSE
author: Nicolas Frisby <nicolas.frisby@gmail.com>
maintainer: Nicolas Frisby <nicolas.frisby@gmail.com>, Ryan Scott <ryan.gl.scott@ku.edu>

build-type: Simple
cabal-version:  >= 1.9.2

source-repository head
  type:     git
  location: git://github.com/nfrisby/invariant-functors.git

library
  build-depends:
      base >= 4 && < 5
    , contravariant >= 0.1.2 && < 2
  exposed-modules: Data.Functor.Invariant

test-suite qc-tests
  type: detailed-0.9
  hs-source-dirs: test
  test-module: Tests
  build-depends: invariant
  build-depends:
      base >= 4 && < 5
    , Cabal >= 1.9.2
    , QuickCheck > 2.8 && <= 2.9
    , cabal-test-quickcheck >= 0.1.6 && < 0.2
