name:                invariant
version:             0.1.2
synopsis:            Haskell 98 invariant functors
description:         Haskell 98 invariant functors
category:            Control, Data
license:             BSD3
license-file:        LICENSE
homepage:            https://github.com/nfrisby/invariant-functors
bug-reports:         https://github.com/nfrisby/invariant-functors/issues
author:              Nicolas Frisby <nicolas.frisby@gmail.com>
maintainer:          Nicolas Frisby <nicolas.frisby@gmail.com>,
                     Ryan Scott <ryan.gl.scott@ku.edu>
build-type:          Simple
cabal-version:       >= 1.9.2
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:                git
  location:            https://github.com/nfrisby/invariant-functors

library
  exposed-modules:     Data.Functor.Invariant
                     , Data.Functor.Invariant.TH
  other-modules:       Data.Functor.Invariant.TH.Internal
                     , Paths_invariant
  hs-source-dirs:      src
  build-depends:       base               >= 4     && < 5
                     , containers         >= 0.1   && < 0.6
                     , contravariant      >= 0.1.2 && < 2
                     , template-haskell   >= 2.4   && < 2.11
  ghc-options:         -Wall

test-suite qc-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       InvariantSpec
                       THSpec
  build-depends:       base       >= 4 && < 5
                     , hspec      >= 1.8
                     , invariant
                     , QuickCheck >= 2 && < 3
  ghc-options:         -Wall
